--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"description": "API project for freeCodeCamp",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "nodemon index.js"
 	},
 	"dependencies": {
-		"express": "^5.0.0-alpha.2",
 		"cors": "^2.8.1",
-		"dotenv": "^8.2.0"
+		"dotenv": "^8.2.0",
+		"express": "^5.0.0-alpha.2"
 	},
 	"repository": {
 		"type": "git",
@@ -20,5 +20,8 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.16"
+	}
 }
